; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_diff_opt_ws_error_highlight.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_diff_opt_ws_error_highlight.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { %struct.diff_options* }
%struct.diff_options = type { i32 }

@.str = private unnamed_addr constant [44 x i8] c"unknown value after ws-error-highlight=%.*s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @diff_opt_ws_error_highlight to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @diff_opt_ws_error_highlight(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.option*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.diff_options*, align 8
  %9 = alloca i32, align 4
  store %struct.option* %0, %struct.option** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load %struct.option*, %struct.option** %5, align 8
  %11 = getelementptr inbounds %struct.option, %struct.option* %10, i32 0, i32 0
  %12 = load %struct.diff_options*, %struct.diff_options** %11, align 8
  store %struct.diff_options* %12, %struct.diff_options** %8, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @parse_ws_error_highlight(i8* %13)
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @BUG_ON_OPT_NEG(i32 %15)
  %17 = load i32, i32* %9, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %3
  %20 = call i32 @_(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %21 = load i32, i32* %9, align 4
  %22 = sub nsw i32 -1, %21
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 @error(i32 %20, i32 %22, i8* %23)
  store i32 %24, i32* %4, align 4
  br label %29

25:                                               ; preds = %3
  %26 = load i32, i32* %9, align 4
  %27 = load %struct.diff_options*, %struct.diff_options** %8, align 8
  %28 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 4
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %25, %19
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @parse_ws_error_highlight(i8*) #1

declare dso_local i32 @BUG_ON_OPT_NEG(i32) #1

declare dso_local i32 @error(i32, i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
